--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="I am really incredible developer. If you would like to hire me email me @ bsoghigian@gmail.com"
     />
     <link href="https://fonts.googleapis.com/css?family=Fira+Code&display=swap" rel="stylesheet">
         <link href='https://fonts.googleapis.com/css?family=Changa One' rel='stylesheet'>
@@ -26,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Hire Me!</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
