--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
     <link href="https://fonts.googleapis.com/css?family=Fira+Code&display=swap" rel="stylesheet">
         <link href='https://fonts.googleapis.com/css?family=Changa One' rel='stylesheet'>
     <link rel="apple-touch-icon" href="logo192.png" />
+    <link href="https://fonts.googleapis.com/css?family=Bangers&display=swap" rel="stylesheet">
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
