fixed all the grammar errors

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
         <link href='https://fonts.googleapis.com/css?family=Changa One' rel='stylesheet'>
     <link rel="apple-touch-icon" href="logo192.png" />
     <link href="https://fonts.googleapis.com/css?family=Bangers&display=swap" rel="stylesheet">
+    <script src="https://vjs.zencdn.net/7.6.6/video.js"></script>
 
     <!--
       manifest.json provides metadata used when your web app is installed on a
