added left project render and working on the open source route

--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="I am really incredible developer. If you would like to hire me email me @ bsoghigian@gmail.com"
+      name="description" 
+      content="Hey I am Bryce Soghigian, A Fullstack Developer who specializes in web technologies who also has expirence with machine learning, data manipulation, robotics, and much more. To bring me in for an interview please inquire at bsoghigian@gmail.com"
     />
     <link href="https://fonts.googleapis.com/css?family=Fira+Code&display=swap" rel="stylesheet">
         <link href='https://fonts.googleapis.com/css?family=Changa One' rel='stylesheet'>
