--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,15 @@
     <link rel="apple-touch-icon" href="logo192.png" />
     <link href="https://fonts.googleapis.com/css?family=Bangers&display=swap" rel="stylesheet">
     <script src="https://vjs.zencdn.net/7.6.6/video.js"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7NL9PJM5H4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-7NL9PJM5H4');
+</script>
 
     <!--
       manifest.json provides metadata used when your web app is installed on a
